fix 'planning it all with us' header that was too high on home page

--- a/css/main.css
+++ b/css/main.css
@@ -174,7 +174,6 @@ p {
     background-image: url(/img/home-body-swirl-bg.png);
     background-position: top center;
     background-repeat: no-repeat;
-   
 }
 #contentContainerInner {
     width: 950px;
@@ -221,6 +220,9 @@ p {
 }
 .red {
     color: red;
+}
+.noMargin {
+    margin: 0;
 }
 #contentContainerInner .light {
     color: white;
